--- a/eMKParty.BackOffice.Support.API/appsettings.json
+++ b/eMKParty.BackOffice.Support.API/appsettings.json
@@ -8,7 +8,8 @@
 
   },
   "DefaultValues": {
-    "SiteDefinition": ""
+    "SiteDefinition": "",
+    "Others" : ""
   },
   "Logging": {
     "LogLevel": {
