--- a/eMKParty.BackOffice.Support.API/appsettings.json
+++ b/eMKParty.BackOffice.Support.API/appsettings.json
@@ -9,7 +9,7 @@
   },
   "DefaultValues": {
     "SiteDefinition": "",
-    "Others" : ""
+    "Others": ""
   },
   "Logging": {
     "LogLevel": {
@@ -17,5 +17,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "TokenKey": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
   "AllowedHosts": "*"
 }
