--- a/eMKParty.BackOffice.Support.API/appsettings.json
+++ b/eMKParty.BackOffice.Support.API/appsettings.json
@@ -18,5 +18,6 @@
     }
   },
   "TokenKey": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
+  "SecurityKey": "b14ca5898a4e4133bbce2ea2315a1916",
   "AllowedHosts": "*"
 }
