--- a/eMKParty.BackOffice.Support.API/eMKParty.BackOffice.Support.API.csproj
+++ b/eMKParty.BackOffice.Support.API/eMKParty.BackOffice.Support.API.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.NETCore.App" Version="2.2.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="8.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
