--- a/eMKParty.BackOffice.Support.Application/eMKParty.BackOffice.Support.Application.csproj
+++ b/eMKParty.BackOffice.Support.Application/eMKParty.BackOffice.Support.Application.csproj
@@ -87,6 +87,8 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.17" />
     <PackageReference Include="MediatR" Version="12.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.18" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\eMKParty.BackOffice.Support.Domain\eMKParty.BackOffice.Support.Domain.csproj" />
