--- a/eMKParty.BackOffice.Support.Domain/eMKParty.BackOffice.Support.Domain.csproj
+++ b/eMKParty.BackOffice.Support.Domain/eMKParty.BackOffice.Support.Domain.csproj
@@ -14,6 +14,7 @@
     <None Remove="Enumerations\" />
     <None Remove="Common\" />
     <None Remove="Common\Interfaces\" />
+    <None Remove="Entities\Feedback\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
@@ -23,6 +24,7 @@
     <Folder Include="Enumerations\" />
     <Folder Include="Common\" />
     <Folder Include="Common\Interfaces\" />
+    <Folder Include="Entities\Feedback\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
