--- a/eMKParty.BackOffice.Support.API/appsettings.json
+++ b/eMKParty.BackOffice.Support.API/appsettings.json
@@ -2,10 +2,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "data source=localhost,1433;initial catalog=MKPartyMasterDB;user id=sa;password=555-admin;TrustServerCertificate=True;MultipleActiveResultSets=True;App=EntityFramework;Pooling=True;Min Pool Size=500;Max Pool Size=6000",
     "eMedicalManagementMinimalAPIDbConnection": "data source=localhost,1433;initial catalog=MedicalsCenterDB;user id=sa;password=555-admin;TrustServerCertificate=True;MultipleActiveResultSets=True;App=EntityFramework;Pooling=True;Min Pool Size=500;Max Pool Size=6000"
-
     //"DefaultConnection": "data source=host.docker.internal;initial catalog=MKPartyMasterDB;user id=sa;password=555-admin;TrustServerCertificate=True;MultipleActiveResultSets=True;App=EntityFramework;Pooling=True;Min Pool Size=500;Max Pool Size=6000",
     //"eMedicalManagementMinimalAPIDbConnection": "data source=host.docker.internal;initial catalog=MedicalsCenterDB;user id=sa;password=555-admin;TrustServerCertificate=True;MultipleActiveResultSets=True;App=EntityFramework;Pooling=True;Min Pool Size=500;Max Pool Size=6000"
-
   },
   "DefaultValues": {
     "SiteDefinition": "",
@@ -15,6 +13,30 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information"
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/api_log-.txt",
+          "rollingInterval": "Day"
+          //"path": "../logs/webapi-.log",
+          //"outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3} {Username} {Message:lj}{Exception}{NewLine}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Properties": {
+      "ApplicationName": "uMkhonto Wesizwe Secured Basic API"
     }
   },
   "TokenKey": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
