--- a/eMKParty.BackOffice.Support.API/appsettings.json
+++ b/eMKParty.BackOffice.Support.API/appsettings.json
@@ -18,7 +18,11 @@
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
-      "Default": "Information"
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
     },
     "WriteTo": [
       {
@@ -27,14 +31,14 @@
       {
         "Name": "File",
         "Args": {
-          "path": "logs/api_log-.txt",
+          "path": "/logs/log-.txt",
+          "rollOnFileSizeLimit": true,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter,Serilog.Formatting.Compact",
           "rollingInterval": "Day"
-          //"path": "../logs/webapi-.log",
-          //"outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} {CorrelationId} {Level:u3} {Username} {Message:lj}{Exception}{NewLine}"
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName" ],
+    "Enrich": ["FromLogContext", "WithThreadId", "WithMachineName"],
     "Properties": {
       "ApplicationName": "uMkhonto Wesizwe Secured Basic API"
     }
