--- a/eMKParty.BackOffice.Support.Web.Razor/appsettings.json
+++ b/eMKParty.BackOffice.Support.Web.Razor/appsettings.json
@@ -1,10 +1,48 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "data source=localhost,1433;initial catalog=MKPartyMasterDB;user id=sa;password=555-admin;TrustServerCertificate=True;MultipleActiveResultSets=True;App=EntityFramework;Pooling=True;Min Pool Size=500;Max Pool Size=6000",
+    "eMedicalManagementMinimalAPIDbConnection": "data source=localhost,1433;initial catalog=MedicalsCenterDB;user id=sa;password=555-admin;TrustServerCertificate=True;MultipleActiveResultSets=True;App=EntityFramework;Pooling=True;Min Pool Size=500;Max Pool Size=6000",
+    "DefaultMKPartyMySqlConnection": "Server=102.211.28.103;User ID=dbmonitoring; Password=Pr0v1d3nce@MK; Database=mkpartymasterdb;Port=3306;"
+  },
+  "DefaultValues": {
+    "SiteDefinition": "web",
+    "Others": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/logs/log-.txt",
+          "rollOnFileSizeLimit": true,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter,Serilog.Formatting.Compact",
+          "rollingInterval": "Day"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithThreadId", "WithMachineName" ],
+    "Properties": {
+      "ApplicationName": "uMkhonto Wesizwe Secured Basic API"
+    }
+  },
+  "TokenKey": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING",
+  "SecurityKey": "b14ca5898a4e4133bbce2ea2315a1916",
   "AllowedHosts": "*"
 }
-
