--- a/eMKParty.BackOffice.Support.API/appsettings.json
+++ b/eMKParty.BackOffice.Support.API/appsettings.json
@@ -8,7 +8,7 @@
     //"eMedicalManagementMinimalAPIDbConnection": "data source=host.docker.internal;initial catalog=MedicalsCenterDB;user id=sa;password=555-admin;TrustServerCertificate=True;MultipleActiveResultSets=True;App=EntityFramework;Pooling=True;Min Pool Size=500;Max Pool Size=6000"
   },
   "DefaultValues": {
-    "SiteDefinition": "",
+    "SiteDefinition": "api",
     "Others": ""
   },
   "Logging": {
