--- a/eMKParty.BackOffice.Support.Domain/eMKParty.BackOffice.Support.Domain.csproj
+++ b/eMKParty.BackOffice.Support.Domain/eMKParty.BackOffice.Support.Domain.csproj
@@ -15,6 +15,7 @@
     <None Remove="Common\" />
     <None Remove="Common\Interfaces\" />
     <None Remove="Entities\Feedback\" />
+    <None Remove="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Entities\" />
@@ -25,6 +26,7 @@
     <Folder Include="Common\" />
     <Folder Include="Common\Interfaces\" />
     <Folder Include="Entities\Feedback\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
