--- a/eMKParty.BackOffice.Support.Application/eMKParty.BackOffice.Support.Application.csproj
+++ b/eMKParty.BackOffice.Support.Application/eMKParty.BackOffice.Support.Application.csproj
@@ -109,6 +109,7 @@
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.18" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\eMKParty.BackOffice.Support.Domain\eMKParty.BackOffice.Support.Domain.csproj" />
